# slidesmd

./: .gitignore  .pre-commit-config.yaml  GUARDRAILS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
slides_agent/: cli.py  extractor.py  indexer.py  watcher.py
slidesmd/: cli.py  embedder.py  extractor.py  image_parser.py  indexer.py  mcp_server.py  querier.py  vector_store.py  watcher.py
tests/: conftest.py  test_e2e_semantic.py  test_embedder.py  test_vector_store.py
